rules.v4
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:DOCKER-USER - [0:0]

##
# INPUT
##

# Allow localhost
-A INPUT -i lo -j ACCEPT

# Allow established connections
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT

# Allow ICMP ping
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT

# SSH
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT

# HTTP
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT

# HTTPS
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT

# Hetzner cloud network
-A INPUT -i ens10 -p all -s 10.0.0.0/16 -m comment --comment "Private cloud" -j ACCEPT
-A INPUT -i eth0 -m set --match-set access src -m comment --comment "Secure access list" -j ACCEPT
-A INPUT -i eth0 -m set --match-set day_whitelist src -m comment --comment "DAY Access access list" -j ACCEPT

##
# DOCKER-USER rules
##

# Allow established connections
-A DOCKER-USER -i eth0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT

# http
-A DOCKER-USER -i eth0 -p tcp -m tcp --dport 80 -j ACCEPT

# https
-A DOCKER-USER -i eth0 -p tcp -m tcp --dport 443 -j ACCEPT

-A DOCKER-USER -i ens10 -p all -s 10.0.0.0/16 -m comment --comment "Private cloud" -j ACCEPT

# Allow all for IPs from IPSET table
-A DOCKER-USER -i eth0 -m set --match-set access src -m comment --comment "Secure access list" -j ACCEPT
-A DOCKER-USER -i eth0 -m set --match-set day_whitelist src -m comment --comment "DAY Access access list" -j ACCEPT

# DOCKER-USER default DROP
-A DOCKER-USER -i eth0 -j DROP

COMMIT
